tests/files/type_checker_tests/should_fail/103.cmdr
//Should fail post-increment on something not a lvalue
1++;
